--- a/.massivewikibuilder/this-wiki-themes/basso/_navbar.html
+++ b/.massivewikibuilder/this-wiki-themes/basso/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar is-fixed-top is-rel8" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-info" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/">
       <div class="is-size-3 is-uppercase has-text-weight-light">{{wiki_title}}</div>
@@ -21,6 +21,10 @@
         <a class="button is-light" href="/all-pages.html">
           All Pages
         </a>
+	<a class="button is-light" href="/search.html">
+          Search
+        </a>
+
       </div>
     </div>
 
