--- a/.massivewikibuilder/this-wiki-themes/basso/page.html
+++ b/.massivewikibuilder/this-wiki-themes/basso/page.html
@@ -30,6 +30,8 @@
     </section>
     {% include '_footer.html' %}
     <script>{% include '_javascript.html' %}</script>
+    <!-- uncomment to add Hypothes.is
     <script src="https://hypothes.is/embed.js" async></script>
+    -->
   </body>
 </html>
